ligolang/src/test/contracts/negative/error_no_tail_recursive_function.mligo
let rec unvalid (n:int):int =
    let res = unvalid (n) in
    res + 1
